--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.5.2 (unreleased)
+------------------
+
+- add getitem() method with same api on NodeList and ProxyList
+
 0.5.1 (2015-03-11)
 ------------------
 
