--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Changelog
 
 - add getitem() method with same api on NodeList and ProxyList
 - fix: inconsistencies when inserting lines around code blocks
+- inserting a blank lines inserts effectively a \n in a LineProxyList
 
 0.5.1 (2015-03-11)
 ------------------
